<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TenDangNhap">Tên Đăng Nhập</string>
    <string name="TenDN">Tên Đăng Nhập</string>
    <string name="MKhau">Mật Khẩu</string>
    <string name="MatKhau">Mật Khẩu</string>
    <string name="savePass">Lưu Mật Khẩu</string>
    <string name="Login">Login</string>
    <string name="title_activity_show">MainActivity</string>
    <string name="DangKi">Đăng Kí Thành Viên ?</string>
    <string name="title_activity_listdanhsach">MainActivity</string>
    <string name="NguyenThuy">Nguyễn Thúy</string>
    <string name="ThongBao">Có Nhớ Tớ Không ?</string>
    <string name="title_activity_info">MainActivity</string>
    <string name="title_activity_frame">MainActivity</string>
    <string name="title_activity_search">MainActivity</string>
    <string name="title_activity_sms">MainActivity</string>
    <string name="title_activity_connect">MainActivity</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="send">Send</string>
     <string name="action_search">Tìm kiêm</string>
    

</resources>
